service-mesh/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: runlogic-rule
  namespace: hawk
spec:
  host: runlogic-service.hawk.svc.cluster.local
  subsets:
    - name: v1
      labels:
        version: v1
