service-mesh/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hawk-virtual-service
  namespace: hawk
spec:
  hosts:
  - "*"
  gateways:
  - hawk-app-gateway
  http:
  - match:
     - uri:
        prefix: "/auth"
    route:
    - destination: 
        host: keycloak.default.svc.cluster.local
  - match:
     - uri:
        prefix: "/logic"
    rewrite:
      uri: "/"
    route:
    - destination: 
        host: runlogic-service.hawk.svc.cluster.local
  - match:
     - uri:
        prefix: "/hawk"
    rewrite:
      uri: "/"
    route:
    - destination: 
        host: hawk-server-service.hawk.svc.cluster.local
