service-mesh/policy.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: logic-app
  namespace: hawk
spec:
  jwtRules:
  - issuer: http://192.168.3.0/auth/realms/hawk
    jwksUri: http://keycloak.default.svc.cluster.local:8080/auth/realms/hawk/protocol/openid-connect/certs
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: hawk-server
  namespace: hawk
spec:
  selector:
    matchLabels:
      app: hawk-server
      env: test
  action: ALLOW
  rules:
    - from:
        - source:
            namespaces: ["hawk"]

---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: logic-service
  namespace: hawk
spec:
  selector:
    matchLabels:
      app: runlogic
      env: test
  action: ALLOW
  rules:
    - from:
        - source:
            requestPrincipals: ["*"]
            # namespaces: ["hawk"]
      to:
        - operation:
            methods: ["GET"]
            paths: ["/logic/test"]
      when:
      - key: request.auth.claims[resource_access][hawk][roles]
        values: ["logic-test-read"]
